<resources>
    <string name="app_name">Posra</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="barcode">Barcode</string>
    <string name="btnSave">Save</string>
    <string name="category">Category</string>
    <string name="Unit">Unit</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="stockQty">Stock Quantity</string>
    <string name="price">Price</string>
    <string name="unitAmount">Amount Per Unit</string>
    <string name="addProduct">Add Product</string>
    <string name="serveCustomer">Serve Customer</string>
    <string name="addStaff">Add Staff</string>
    <string name="products">Products</string>
    <string name="staff">Staff</string>
    <string name="cameraPermission">Camera Permission</string>
    <string name="view">View</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="totalPrice">Total Price</string>
    <string name="totalQuantity">Total Quantity</string>
    <string name="btnSearch">Search</string>
    <string name="search_by">Search by...</string>
    <string name="productSearch">Product Search</string>
    <string name="productRemove">Product Remove</string>
    <string name="remove_by">Remove By</string>
    <string name="btnUpdate">Update</string>
    <string name="staffSearch">Staff Search</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="jobtitle">Job Title</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="dateHired">Date Hired</string>
    <string name="deleteAll">Delete all</string>
    <string name="deleteOne">Delete 1</string>

    <string-array name="dd_cate">
        <item>Dairy</item>
        <item>Fruits &amp; Veg</item>
        <item>Sources</item>
        <item>Drinks</item>
        <item>Gardening</item>
        <item>Electrical</item>
    </string-array>

    <string-array name="dd_unit">
        <item>Piece</item>
        <item>Pair</item>
        <item>Grams</item>
        <item>KG</item>
        <item>IBs</item>
        <item>Pack</item>
        <item>Set</item>
        <item>ml</item>
        <item>Ltr</item>
    </string-array>

    <string-array name="dd_product_search">
        <item>ID</item>
        <item>Barcode</item>
        <item>Name</item>
        <item>Price</item>
        <item>Category</item>
        <item>Unit</item>
    </string-array>

    <string-array name="dd_staff_search">
        <item>ID</item>
        <item>First Name</item>
        <item>Last Name</item>
        <item>Email</item>
        <item>Phone Number</item>
        <item>Job Title</item>
        <item>Hired Date</item>
        <item>Location</item>
    </string-array>

    <string-array name="dd_staff_job_title">
        <item>Regional Manager</item>
        <item>Store Manager</item>
        <item>Supervisor</item>
        <item>Team Leader</item>
        <item>Sales Advisor</item>
    </string-array>

    <string-array name="dd_staff_location">
        <item>Erbil</item>
        <item>Sulaymaniyah</item>
        <item>Halabja</item>
        <item>Ranya</item>
        <item>Chamchamal</item>
        <item>Duhok</item>
    </string-array>
</resources>