<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLays">

    <Button
        android:id="@+id/btnServeCustomer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/serveCustomer"
        android:textSize="20sp"
        app:icon="@drawable/ic_baseline_shopping_cart_24" />

    <Button
        android:id="@+id/btnCameraPermission"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/cameraPermission"
        android:textSize="20sp"
        app:icon="@drawable/ic_baseline_camera_enhance_24" />

    <Button
        android:id="@+id/btnProduct"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/products"
        android:textSize="20sp"
        app:icon="@drawable/ic_baseline_widgets_24" />

    <Button
        android:id="@+id/btnStaff"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/staff"
        android:textSize="20sp"
        app:icon="@drawable/ic_img_agents_12" />

</LinearLayout>